--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,24 +1,32 @@
-name: Run Tests
+name: Run Python Tests
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main, develop ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
+
+    - name: Set up Python 3.12
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
+        python-version: '3.12'
+
     - name: Install dependencies
-      run: pip install pytest
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+    - name: Install project
+      run: |
+        pip install -e .
+
     - name: Run tests
-      run: pytest
+      run: |
+        pytest tests/ -v
